[package]
name = "download-manager"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kiban.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
crc32c.workspace = true
base64.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
block2.workspace = true
objc-sys.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tokio-stream = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["js"] }
web-sys = { workspace = true, features = ["console"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
rstest.workspace = true
mock-registry.workspace = true
wiremock.workspace = true
chrono.workspace = true

[lints]
workspace = true

[[test]]
name = "unit"
path = "tests/unit/test_entry.rs"
