[package]
name = "dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
syn = "2.0.111"
quote = "1.0.42"
depfile = "0.1.1"
tempfile = "3.23.0"
clang-ast = "0.1.35"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
