[package]
name = "hanashi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
bindings = ["bindings-uniffi", "bindings-napi", "bindings-pyo3", "bindings-wasm"]
bindings-uniffi = ["dep:uniffi"]
bindings-napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
bindings-pyo3 = ["dep:pyo3"]
bindings-wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:tsify"]

[dependencies]
bindings.workspace = true
token-stream-parser.workspace = true
uniffi = { workspace = true, optional = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
tokenizers.workspace = true
openai-harmony.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
regex.workspace = true
fancy-regex.workspace = true
llm_json.workspace = true
libc.workspace = true
indexmap.workspace = true

[build-dependencies]
serde_json.workspace = true
napi-build = { workspace = true, optional = true }
