[package]
name = "heap_bench"
version.workspace = true
edition.workspace = true

[dependencies]
metal.workspace = true
objc2.workspace = true
mach2.workspace = true
uzu = { path = "../uzu" }

[[bin]]
name = "heap_bench"
path = "src/main.rs"

[[bin]]
name = "allocator_bench"
path = "src/allocator_bench.rs"

[[bin]]
name = "realistic_bench"
path = "src/realistic_bench.rs"

[[bin]]
name = "multi_model_bench"
path = "src/multi_model_bench.rs"
