[package]
name = "json-transform"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
regex.workspace = true
fancy-regex.workspace = true
llm_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-tree.workspace = true
