[package]
name = "json-transform"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
regex.workspace = true
fancy-regex.workspace = true
llm_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-tree.workspace = true
